--- a/themes/bookrss/bak/assets/scss/_custom.scss
+++ b/themes/bookrss/bak/assets/scss/_custom.scss
@@ -20,18 +20,43 @@ pre {
 }
 
 //site
-
+.site {
+    max-width: initial;
+}
 
 //header
 .site-header {
     background-color: $color_2a4861;
+
+    .home-link {
+        color: $color_fff;
+        padding: 2em 0 0;
+        min-height: auto;
+    }
+
+    .site-title {
+        padding: 0;
+        font-size: 2em;
+    }
+
+    .site-description {
+        text-align: right;
+        opacity: 0.6;
+        font: inherit;
+    }
 }
 
 //navbar
-
+.navbar {
+    max-width: initial;
+}
 
 //content
-
+.post-navigation {
+    .nav-links {
+        font-size: 0.75em;
+    }
+}
 
 .markdown-body {
     color: inherit;
@@ -44,10 +69,25 @@ pre {
 //footer
 .site-footer {
     background-color: $color_2a4861;
+    text-align: left;
+    border-top: 1px solid $color_e8e5ce;
+
+    a {
+        color: $color_fff;
+    }
 }
 
 // front-page
 .home,
 .page-template-page-front {
+    .entry-content {
+        h2 {
+            border-top: 1px solid $color_e8e5ce;
+        }
 
+        ul {
+            margin: 1em;
+            padding: 0;
+        }
+    }
 }
