--- a/plugins/bookplus/css/fontend.css
+++ b/plugins/bookplus/css/fontend.css
@@ -15,12 +15,14 @@
     padding: 0 !important;
     list-style: none;
 }
+.list-document li{
+    color: #aaa;
+}
 
 .list-document ul a,
 .nav-document ul a {
-    font-size: 0.85em;
     position: relative;
-    padding-left: 1.2em;
+    padding-left: 1.4em;
 }
 
 .list-document ul a {
@@ -31,11 +33,12 @@
 .nav-document ul a::before {
     position: absolute;
     background-image: url("../img/document.svg");
-    background-size: 1em;
+    background-size: 1.2em;
+    background-repeat: no-repeat;
     display: inline-block;
     content: '';
-    width: 1em;
-    height: 1em;
+    width: 1.2em;
+    height: 1.2em;
     left: 0;
     bottom: 0;
 }
