--- a/themes/bookrss/style.css
+++ b/themes/bookrss/style.css
@@ -3,7 +3,7 @@ Theme Name: BookRss
 Version: 1.0
 Author: A.wei
 Author URI: https://gravatar.cn
-Template: twentythirteen
+Template: twentytwelve
 */
 
 
