--- a/themes/bookrss/assets/scss/_custom.scss
+++ b/themes/bookrss/assets/scss/_custom.scss
@@ -34,34 +34,45 @@ a {
 }
 
 // common
-h1,
-.heading-size-1 {
-    font-size: 3.6rem !important;
+@mixin heading-size() {
+    h1,
+    .heading-size-1 {
+        font-size: 3.6rem;
+    }
+
+    h2,
+    h2.entry-title,
+    .heading-size-2 {
+        font-size: 3.2rem;
+    }
+
+    h3,
+    .heading-size-3 {
+        font-size: 2.8rem;
+    }
+
+    h4,
+    .heading-size-4 {
+        font-size: 2.4rem;
+    }
+
+    h5,
+    .heading-size-5 {
+        font-size: 2.1rem;
+    }
+
+    h6,
+    .heading-size-6 {
+        font-size: 1.6rem;
+    }
 }
 
-h2,
-.heading-size-2 {
-    font-size: 3.2rem !important;
+@include breakpoint(1220 pxpx) {
+    @include heading-size();
 }
 
-h3,
-.heading-size-3 {
-    font-size: 2.8rem !important;
-}
-
-h4,
-.heading-size-4 {
-    font-size: 2.4rem !important;
-}
-
-h5,
-.heading-size-5 {
-    font-size: 2.1rem !important;
-}
-
-h6,
-.heading-size-6 {
-    font-size: 1.6rem !important;
+@include breakpoint(700px) {
+    @include heading-size();
 }
 
 // site
